<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewToDoActivity">

    <Button
        android:id="@+id/toDo_view_delete"
        android:layout_width="115dp"
        android:layout_height="49dp"
        android:text="@string/delete_button"

        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toDo_view_update"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/toDo_view_update"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:text="@string/update_button"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/toDo_view_home"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/home_button"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toDo_view_update" />

    <TextView
        android:id="@+id/toDo_view_title"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:text="@string/title_create_window"
        android:gravity="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toDo_view_content"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:text="@string/content_window_text"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toDo_view_title" />
</androidx.constraintlayout.widget.ConstraintLayout>